--- a/Codigo/Vacunacion.html
+++ b/Codigo/Vacunacion.html
@@ -185,18 +185,26 @@
     </div>
 
     <div class="Preparation">
-        <ul>
-            <li>Avoid alcoholic beverages</li>
-            <ul></ul>
-            <li>Avoid stress</li>
-            <ul>Stress has a profound effect on immune work. Moreover, prolonged stress can increase cortisol production and oxidative stress in the body.</ul>
-            <li>Eat healty food</li>
-            <ul></ul>
-            <li>Get enough sleep</li>
-            <ul>Get a good night’s sleep, drink plenty of water and eat regularly to keep your blood sugar steady. Taking care of yourself helps your body function properly.</ul>
-            <li>Exercise or physical activity</li>
-            <ul></ul>
-        </ul>
+            <section class="menu1">
+                <a href="#menu1">alcoholic beverages</a>
+                <p>Its consumption, especially if it is excessive, weakens the immune system and, consequently, reduces the ability to deal with infectious diseases, such as the case of COVID-19. Binge drinking includes binge drinking, defined as five or more drinks on a single occasion (within two to three hours) for men and four or more drinks (within two to three hours) for women.</p>
+            </section>
+            <section class="menu2">
+                <a href="#menu2">Avoid stress</a>
+                <p>Stress has a profound effect on immune work. Moreover, prolonged stress can increase cortisol production and oxidative stress in the body.</p>
+            </section>
+            <section class="menu3">
+                <a href="#menu3">Eat healty food</a>
+                <p>Food is a very important aspect. Balanced nutrition helps reduce the recovery time of the patient with COVID-19 and reduce the complications that could arise in the convalescence process.</p>
+            </section>
+            <section class="menu4">
+                <a href="#menu4">Get enough sleep</a>
+                <p>Get a good night’s sleep, drink plenty of water and eat regularly to keep your blood sugar steady. Taking care of yourself helps your body function properly.</p>
+            </section>
+            <section class="menu5">
+                <a href="#menu5">Exercise or physical activity</a>
+                <p>Maintaining regular physical activity increases the chances of survival in COVID-19 patients by up to eight times compared to those who lead a sedentary life.</p>
+            </section>
     </div>
 
     <div class="Square2"></div>
@@ -261,8 +269,6 @@
             Features
         </div>
 
-        
-
         <div class="NewBlog">
             New & Blog
         </div>
@@ -290,6 +296,50 @@
         <div class="ContactUs">
             Contac Us
         </div>
+    </div>
+
+    <!--Icons-->
+    <div class="BPIcon">
+        <img src="../Imagenes/BPicon.png" alt="shield" width="20" height="20">
+    </div>
+    <div class="SVIcon">
+        <img src="../Imagenes/SVIcon.png" alt="star" width="20" height="20">
+    </div>
+    <div class="SIcon">
+        <img src="../Imagenes/SIcon.png" alt="Schedule" width="20" height="20">
+    </div>
+    <div class="LIcon">
+        <img src="../Imagenes/LIcon.png" alt="Pin Location" width="20" height="20">
+    </div>
+    <div class="DIcon">
+        <img src="../Imagenes/DIcon.png" alt="Date" width="20" height="20">
+    </div>
+    <div class="VTIcon">
+        <img src="../Imagenes/VTIcon.png" alt="Vaccine Type" width="20" height="20">
+    </div>
+    <div class="MSVIcon">
+        <img src="../Imagenes/MSVIcon.png" alt="Minimize spread" width="30" height="30">
+    </div>
+    <div class="FAIcon">
+        <img src="../Imagenes/FAIcon.png" alt="Forming antibodies" width="30" height="30">
+    </div>
+    <div class="PPNIcon">
+        <img src="../Imagenes/PPNIcon.png" alt="Protectic nearby" width="30" height="30">
+    </div>
+    <div class="CGIIcon">
+        <img src="../Imagenes/CGIIcon.png" alt="Creating group immunity" width="30" height="30">
+    </div>
+    <div class="CIcon">
+        <img src="../Imagenes/CIcon.png" alt="Call" width="50" height="50">
+    </div>
+    <div class="CHIcon">
+        <img src="../Imagenes/CHIcon.png" alt="Chat" width="50" height="50">
+    </div>
+    <div class="VIcon">
+        <img src="../Imagenes/VIcon.png" alt="Videocall" width="50" height="50">
+    </div>
+    <div class="EIcon">
+        <img src="../Imagenes/EIcon.png" alt="Email" width="50" height="50">
     </div>
 
 </body>
